Fix program box alignment

--- a/app/(pages)/_components/Home/ProgramsBox.module.scss
+++ b/app/(pages)/_components/Home/ProgramsBox.module.scss
@@ -19,10 +19,11 @@
 
     h2{
         font-weight: 548;
+        height: 18.2%;
     }
 
     p{
-        margin-top: 5.5%;
+        margin-top: 6.9%;
         line-height: 1.8rem;
         font-weight: 275;
         font-size: 1.28rem; //might have to change units for responsiveness
